config/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: %value namespace%%nl%
  labels:
    description: %value description%%nl%
