config/kubernetes/ingress-nginx-v1-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: %value appPrefix%%value name%-redirects%nl%
  namespace: %value namespace%%nl%
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths: %loop paths%%ifvar redirect equals('true')%
      - path: %value path%(/|$)(.*)%nl%
        pathType: Prefix
        backend:
            service: 
              name: %value service%%nl%
              port:
                number: %value port%%nl%%endifvar%%endloop%
