config/kubernetes/ingress-nginx-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: %value appPrefix%%value name%%nl%
  namespace: %value namespace%%nl%
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths: %loop paths%%ifvar redirect equals('false')%
      - path: %value path%%nl%
        pathType: Prefix
        backend:
            service: 
              name: %value service%%nl%
              port:
                number: %value port%%nl%%endifvar%%endloop%
