config/kubernetes/ingress-nginx-v1beta1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: %value appPrefix%%value name%%nl%
  namespace: %value namespace%%nl%
spec:
  rules:
    - http:
        paths: %loop paths%%ifvar redirect equals('false')%
          - path: %value path%%nl%
            backend:
              serviceName: %value service%%nl%
              servicePort: %value port%%nl%%endifvar%%endloop%
